# rendercv-tinytex

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  test.yaml
rendercv_tinytex/: __init__.py  run.py
tests/: test_rendercv_tinytex.py
